added cargo parameters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Vector similarity search engine library"
 homepage = "https://github.com/insight-platform/Similari"
 repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
-keywords = ["machine-learning", "vector-similarity", "similarity-engine", "feature-similarity"]
+keywords = ["machine-learning", "similarity"]
 categories = ["algorithms", "concurrency", "data-structures", "database", "mathematics", "science"]
 version = "0.1.0"
 edition = "2021"
