--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ homepage = "https://github.com/insight-platform/Similari"
 repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity"]
-categories = ["algorithms", "concurrency", "data-structures", "database", "mathematics", "science"]
+categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
 version = "0.1.0"
 edition = "2021"
 license-file = "LICENSE"
