--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["machine-learning", "similarity"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
 version = "0.1.0"
 edition = "2021"
+license="Apache-2.0"
 license-file = "LICENSE"
 
 [dependencies]
