--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 license="Apache-2.0"
 
@@ -20,6 +20,7 @@ thiserror = "1.0.31"
 
 [dev-dependencies]
 rand = "0.8.5"
+once_cell = "1.12.0"
 
 [profile.dev]
 opt-level = 3
