--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: icepuma/rust-action@1.62.0
+    - name: Cargo Format Check
+      run: cargo fmt -- --check
+    - name: Cargo Clippy Check
+      run: cargo clippy -- -Dwarnings
     - name: Build
       run: cargo build --verbose
     - name: Run tests
