--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,10 +18,5 @@ jobs:
     - uses: actions/checkout@v3
     - uses: icepuma/rust-action@1.62.0
     - name: Cargo Format Check
-      run: cargo fmt -- --check
-    - name: Cargo Clippy Check
-      run: cargo clippy -- -Dwarnings
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      with:
+        args: cargo fmt -- --check && cargo clippy -- -Dwarnings && cargo test
