--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ itertools = "0.10.3"
 anyhow = "1.0.58"
 thiserror = "1.0.31"
 once_cell = "1.12.0"
+num_cpus = "1.13.1"
 
 [dev-dependencies]
 rand = "0.8.5"
