Improved parallel operations execution (#12)
* Started developing complex tracking example

* Started developing complex tracking example

* Started developing complex tracking example

* trait types optimized

* implemented change notifier

* implemented default enum for tracking example

* wip examples

* Clippy fix

* Clippy fix

* Clippy fix

* wip better threading model

* wip new impl for threaded handling

* removed rayon

* fixed all the code with new parallel computing model

* fixed build warning

* fixed build warning

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - uses: icepuma/rust-action@1.62.0
+      with:
+        args: cargo fmt -- --check && cargo clippy -- -Dwarnings && cargo test
