--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,18 @@ categories = ["algorithms", "data-structures", "database", "mathematics", "scien
 version = "0.2.6"
 edition = "2021"
 license="Apache-2.0"
+rust-version = "1.62"
 
 [dependencies]
 nalgebra = "0.31.0"
-rayon = "1.5.3"
 itertools = "0.10.3"
 anyhow = "1.0.58"
 thiserror = "1.0.31"
+once_cell = "1.12.0"
+num_cpus = "1.13.1"
 
 [dev-dependencies]
 rand = "0.8.5"
-once_cell = "1.12.0"
 
 [profile.dev]
 opt-level = 3
