--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ license="Apache-2.0"
 rust-version = "1.62"
 
 [dependencies]
-nalgebra = "0.31.0"
 itertools = "0.10.3"
 anyhow = "1.0.58"
 thiserror = "1.0.31"
 once_cell = "1.12.0"
 num_cpus = "1.13.1"
+ultraviolet = "0.9.0"
 
 [dev-dependencies]
 rand = "0.8.5"
