--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
-version = "0.3.1"
+version = "0.4.1"
 edition = "2021"
 license="Apache-2.0"
 rust-version = "1.62"
@@ -29,3 +29,5 @@ opt-level = 3
 [profile.release]
 opt-level = 3
 
+[profile.bench]
+opt-level = 3
