--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "1.0.31"
 once_cell = "1.12.0"
 num_cpus = "1.13.1"
 ultraviolet = "0.9.0"
+crossbeam = "0.8.1"
 
 [dev-dependencies]
 rand = "0.8.5"
