--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "similari"
 authors = ["Ivan Kudriavtsev <ivan.a.kudryavtsev@gmail.com>"]
-description = "Vector similarity search engine library"
+description = "Machine learning framework for building trackers and similarity search engines"
 homepage = "https://github.com/insight-platform/Similari"
 repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
-version = "0.8.3"
+version = "0.8.4"
 edition = "2021"
 license="Apache-2.0"
 rust-version = "1.62"
