--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "Machine learning framework for building trackers and similarity s
 homepage = "https://github.com/insight-platform/Similari"
 repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
-keywords = ["machine-learning", "similarity"]
+keywords = ["machine-learning", "similarity", "tracking"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
 version = "0.8.4"
 edition = "2021"
