--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity", "tracking"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
-version = "0.15.0"
+version = "0.16.0"
 edition = "2021"
 license="Apache-2.0"
 rust-version = "1.62"
@@ -21,6 +21,7 @@ num_cpus = "1.13.1"
 ultraviolet = "0.9.0"
 crossbeam = "0.8.1"
 rand = "0.8.5"
+log = "0.4.17"
 
 [dev-dependencies]
 wide = "0.7.4"
