--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ultraviolet = "0.9.0"
 crossbeam = "0.8.1"
 rand = "0.8.5"
 log = "0.4.17"
+nalgebra = "0.31.0"
 
 [dev-dependencies]
 wide = "0.7.4"
