--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity", "tracking"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
-version = "0.18.6"
+version = "0.19.0"
 edition = "2021"
 license="Apache-2.0"
 rust-version = "1.62"
+
 
 [dependencies]
 itertools = "0.10.3"
@@ -24,6 +25,7 @@ rand = "0.8.5"
 log = "0.4.17"
 nalgebra = "0.31.0"
 pathfinding = "3.0.13"
+geo = "0.22"
 
 [dev-dependencies]
 wide = "0.7.4"
