--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ log = "0.4.17"
 nalgebra = "0.31.0"
 pathfinding = "3.0.13"
 geo = "0.22"
+smartcore = "0.2.1"
+rayon = "1.5.3"
 
 [dev-dependencies]
 wide = "0.7.4"
