--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ description = "Machine learning framework for building object trackers and simil
 homepage = "https://github.com/insight-platform/Similari"
 repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
-keywords = ["machine-learning", "similarity", "tracking"]
+keywords = ["machine-learning", "similarity", "tracking", "SORT", "DeepSORT"]
 categories = ["algorithms", "data-structures", "database", "mathematics", "science"]
 version = "0.19.5"
 edition = "2021"
