--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ edition = "2021"
 license="Apache-2.0"
 rust-version = "1.62"
 
+[lib]
+crate-type = ["cdylib", "lib"]
 
 [dependencies]
 itertools = "0.10.3"
@@ -27,6 +29,10 @@ nalgebra = "0.31.0"
 pathfinding = "3.0.13"
 geo = "0.22"
 rayon = "1.5.3"
+
+[dependencies.pyo3]
+version = "0.16"
+features = ["extension-module"]
 
 [dev-dependencies]
 wide = "0.7.4"
