--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, i686]
+        target: [x86_64]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
