--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ homepage = "https://github.com/insight-platform/Similari"
 repository = "https://github.com/insight-platform/Similari"
 readme = "README.md"
 keywords = ["machine-learning", "similarity", "tracking", "SORT", "DeepSORT"]
-categories = ["algorithms", "data-structures", "object-tracking", "science"]
-version = "0.20.5"
+categories = ["algorithms", "data-structures", "computer-vision", "science"]
+version = "0.20.6"
 edition = "2021"
 license="Apache-2.0"
 rust-version = "1.62"
