improved bbox fields naming

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -20,6 +20,8 @@ ENV RUSTFLAGS=" -C target-cpu=native -C opt-level=3"
 
 RUN cargo test
 RUN maturin build --release --out dist
+RUN pip3 install dist/*.whl
+
 
 
 
