--- a/.github/workflows/docker-maturin-python-3_10.yml
+++ b/.github/workflows/docker-maturin-python-3_10.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker Python 3.10
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
