--- a/.github/workflows/docker-maturin-rust-1_62.yml
+++ b/.github/workflows/docker-maturin-rust-1_62.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker Rust 1.62
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
