--- a/.github/workflows/docker-maturin-python-3_10.yml
+++ b/.github/workflows/docker-maturin-python-3_10.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Docker Python 3.10
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -60,15 +60,12 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # Build and push Docker image with Buildx (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build Python API with Maturin
+      - name: Build Python API with Maturin (Rust base image)
         id: build-and-push
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          file: python/Dockerfile
+          file: docker/python_3.10/Dockerfile
           push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
