wip sort min confidence added

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,9 @@
 [build]
 rustflags = "-C target-cpu=native"
+
+# Apple M1 fix
+[target.aarch64-apple-darwin]
+rustflags = [
+    "-C", "link-arg=-undefined",
+    "-C", "link-arg=dynamic_lookup",
+]
