--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,8 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
+[tool.black]
+skip-string-normalization = true
+
+[tool.pylint.messages_control]
+max-line-length = 88
