--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ skip-string-normalization = true
 
 [tool.pylint.messages_control]
 max-line-length = 88
+
+[tool.maturin]
+python-source = "python"
