--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,8 @@
-[build]
-rustflags = "-C target-cpu=native"
+[target.x86_64-unknown-linux-gnu]
+rustflags = "-C target-cpu=x86-64"
+
+[target.x86_64-pc-windows-gnu]
+rustflags = "-C target-cpu=x86-64"
 
 # Apple Silicone fix
 [target.aarch64-apple-darwin]
