--- a/.github/workflows/docker-maturin-rust-1_67.yml
+++ b/.github/workflows/docker-maturin-rust-1_67.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   build:
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
