--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -42,29 +42,6 @@ jobs:
           name: wheels
           path: dist
 
-#  windows:
-#    runs-on: windows-latest
-#    strategy:
-#      matrix:
-#        target: [x64]
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: '3.10'
-#          architecture: ${{ matrix.target }}
-#      - name: Build wheels
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          target: ${{ matrix.target }}
-#          args: --release --out dist --find-interpreter
-#          sccache: 'true'
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: wheels
-#          path: dist
-
   macos:
     runs-on: macos-latest
     strategy:
@@ -106,7 +83,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [linux, windows, macos, sdist]
+    needs: [linux, macos, sdist]
     steps:
       - uses: actions/download-artifact@v3
         with:
