--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ rust-version = "1.66"
 crate-type = ["cdylib", "lib"]
 name = "similari"
 
+[features]
+default = ["python"]
+python = ["dep:pyo3", "dep:pyo3-build-config"]
+
 [dependencies]
 itertools = "0.10"
 anyhow = "1.0"
@@ -35,9 +39,10 @@ env_logger = "0.10"
 [dependencies.pyo3]
 version = "0.18"
 features = ["extension-module"]
+optional = true
 
 [build-dependencies]
-pyo3-build-config = "0.18"
+pyo3-build-config = { version = "0.18", optional = true }
 
 [dev-dependencies]
 wide = "0.7"
