--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,8 @@
 [target.x86_64-unknown-linux-gnu]
-rustflags = "-C target-cpu=x86-64"
+rustflags = "-C target-cpu=x86-64-v3"
 
 [target.x86_64-pc-windows-gnu]
-rustflags = "-C target-cpu=x86-64"
+rustflags = "-C target-cpu=x86-64-v3"
 
 # Apple Silicone fix
 [target.aarch64-apple-darwin]
