--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-linux
+          name: wheels-linux-${{ github.run_id }}
           path: distfiles/dist
 
       - name: Publish to PyPI
@@ -94,7 +94,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-windows
+          name: wheels-windows-${{ github.run_id }}
           path: dist
       - name: Publish to PyPI
         if: "startsWith(github.ref, 'refs/tags/')"
@@ -125,7 +125,7 @@ jobs:
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-macos
+          name: wheels-macos-${{ github.run_id }}
           path: dist
       - name: Publish to PyPI
         if: "startsWith(github.ref, 'refs/tags/')"
@@ -148,7 +148,7 @@ jobs:
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-ubuntu-latest
+          name: wheels-ubuntu-latest-${{ github.run_id }}
           path: dist
       - name: Publish to PyPI
         if: "startsWith(github.ref, 'refs/tags/')"
