--- a/docker/Dockerfile.manylinux_2_28_X64
+++ b/docker/Dockerfile.manylinux_2_28_X64
@@ -3,6 +3,7 @@ FROM ghcr.io/insight-platform/manylinux_2_28_x64:v0.0.3 as builder
 WORKDIR /opt
 COPY . .
 ARG PYTHON_INTERPRETER
+RUN chmod +x /opt/docker/build-manylinux.sh
 RUN bash /opt/docker/build-manylinux.sh
 RUN rm -rf target
 
