--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
             arch: linux/amd64
             runner: X64
     runs-on:
-      - self-hosted
+      - ${{ matrix.hosting }}
       - ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v3
@@ -50,7 +50,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           file: ${{ matrix.docker_file }}
           platforms: ${{ matrix.arch }}
