--- a/docker/Dockerfile.manylinux_2_28_X64
+++ b/docker/Dockerfile.manylinux_2_28_X64
@@ -1,4 +1,4 @@
-FROM ghcr.io/insight-platform/manylinux_2_28_x64:v0.0.7 as builder
+FROM ghcr.io/insight-platform/manylinux_2_28_x64:v0.0.7 AS builder
 
 WORKDIR /opt
 COPY . .
@@ -7,5 +7,5 @@ RUN chmod +x /opt/docker/build-manylinux.sh
 RUN bash /opt/docker/build-manylinux.sh
 RUN rm -rf target
 
-FROM alpine:3.18 as dist
+FROM alpine:3.18 AS dist
 COPY --from=builder /opt/dist /opt/dist
