--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,6 +67,15 @@ jobs:
           name: wheels-${{ github.job }}-${{ matrix.runner }}
           path: distfiles/dist
 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          
+      - name: Install pip
+        run: |
+          python -m ensurepip
+          python -m pip install --upgrade pip
+  
       - name: Publish to PyPI
         if: startsWith(github.ref, 'refs/tags/')
         uses: PyO3/maturin-action@v1
